# url-shortener

./: .gitignore  main.py  pyproject.toml  readme.md  tests.py  tmp.db
.github/workflows/: pytest.yml
endpoints/: delete_endpoint.py  health_endpoint.py  read_all_endpoint.py  read_endpoint.py  redirect_endpoint.py  shorten_endpoint.py  test_endpoint.py
functions/: check_key.py  fetch_url_details.py  generate_alias.py  get_db.py  seed_db.py  setup.py  teardown.py  verify_api_key.py
src/endpoints/: delete_endpoint.py  read_endpoint.py  redirect_endpoint.py  shorten_endpoint.py  test_endpoint.py
src/functions/: fetch_url_details.py
tests/: test_e2e.py
