[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "validators>=0.35.0",
]
[tool.pitest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
